--- a/portfolio.html
+++ b/portfolio.html
@@ -10,10 +10,10 @@
 <body>
     <header class="header">
         <nav>
-            <a href="./index.html" class="logo">WebStudio</a>
+            <a href="./index.html">WebStudio</a>
             <ul class="menu">
-                <li><a href="">Studio</a></li>
-                <li><a href="">Portfolio</a></li>
+                <li><a href="./index.html">Studio</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
                 <li><a href="">Contacts</a></li>
             </ul>
         </nav>
@@ -26,17 +26,71 @@
     </header>
     <main>
       <section>
-        <ul class="filters">
-            <li class="filters_target">All</li>
-            <li class="filters_target">Web Site</li>
-            <li class="filters_target">App</li>
-            <li class="filters_target">Desing</li>
-            <li class="filters_target">Marketing</li>
+        <ul class="btn-menu">
+            <li><button type="button" class="btn-text">All</button></li>
+            <li><button type="button" class="btn-text">WebSite</button></li>
+            <li><button type="button" class="btn-text">App</button></li>
+            <li><button type="button" class="btn-text">Desing</button></li>
+            <li><button type="button" class="btn-text">Marketing</button></li>            
         </ul>
       </section>
-      <section></section>
-      <section></section>
-      <section></section>
+      <section>
+        <ul>
+            <li>
+                <img src="./images/imgportfolio1.jpg" alt="" width="360" height="300">
+                <h2>Banking App Interface Concept</h2>
+                <p>App</p>
+            </li>
+            <li>
+                <img src="./images/imgportfolio2.jpg" alt="" width="360" height="300">
+                <h2>Cashless Payment</h2>
+                <p>Marketing</p>
+            </li>
+            <li>
+                <img src="./images/imgportfolio3.jpg" alt="" width="360" height="300">
+                <h2>Meditation App</h2>
+                <p>App</p>
+            </li>
+        </ul>
+      </section>
+      <section>
+       <ul>
+        <li>
+            <img src="./images/imgportfolio4.jpg" alt="" width="360" height="300">
+            <h2>Taxi Service</h2>
+            <p>Marketing</p>
+        </li>
+        <li>
+            <img src="./images/imgportfolio5.jpg" alt="" width="360" height="300">
+            <h2>Screen Illustrations</h2>
+            <p>Design</p>
+        </li>
+        <li>
+            <img src="./images/imgportfolio6.jpg" alt="" width="360" height="300">
+            <h2>Online Courses</h2>
+            <p>Marketing</p>
+        </li>
+       </ul>
+      </section>
+      <section>
+        <ul>
+            <li>
+                <img src="./images/imgportfolio7.jpg" alt="" width="360" height="300">
+                <h2>Instagram Stories Concept</h2>
+                <p>Design</p>
+            </li>
+            <li>
+                <img src="./images/imgportfolio8.jpg" alt="" width="360" height="300">
+                <h2>Organic Food</h2>
+                <p>Web Site</p>
+            </li>
+            <li>
+                <img src="./images/imgportfolio9.jpg" alt="" width="360" height="300">
+                <h2>Fresh Coffee</h2>
+                <p>Web Site</p>
+            </li>
+        </ul>
+      </section>
     </main>
     <footer>
         <a href="./index.html" class="logo">WebStudio</a>
