--- a/index.html
+++ b/index.html
@@ -12,22 +12,22 @@
         <nav>
             <a href="./index.html">WebStudio</a>
             <ul class="menu">
-                <li><a href="./index.html">Studio</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
-                <li><a href="">Contacts</a></li>
+                <li class=""><a href="./index.html">Studio</a></li>
+                <li class=""><a href="portfolio.html">Portfolio</a></li>
+                <li class=""><a href="">Contacts</a></li>
             </ul>
         </nav>
         <address>
             <ul>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                <li class=""><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class=""><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
     </header>
     <main>
         <section>
             <h1>Effective Solutions for Your Business</h1>            
-            <button type="button">Order Service</button>
+            <button type="button" class="">Order Service</button>
         </section>
         <section>
             <h2 hidden>Our advantages</h2>
