--- a/index.html
+++ b/index.html
@@ -5,22 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
-    <link rel="stylesheet" href="./CSS/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./CSS/style.css"/>
 </head>
 <body>
     <header class="header">
         <nav>
             <a href="./index.html">WebStudio</a>
             <ul class="menu">
-                <li class=""><a href="./index.html">Studio</a></li>
-                <li class=""><a href="portfolio.html">Portfolio</a></li>
-                <li class=""><a href="">Contacts</a></li>
+                <li class="menu-link"><a href="./index.html">Studio</a></li>
+                <li class="menu-link"><a href="portfolio.html">Portfolio</a></li>
+                <li class="menu-link"><a href="">Contacts</a></li>
             </ul>
         </nav>
         <address>
             <ul>
-                <li class=""><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li class=""><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                <li class="menu-link"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="menu-link"><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
     </header>
