--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./CSS/style.css"/>
 </head>
 <body>
@@ -12,9 +15,9 @@
         <nav>
             <a href="./index.html">WebStudio</a>
             <ul class="menu">
-                <li><a href="./index.html">Studio</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
-                <li><a href="">Contacts</a></li>
+                <li class="studio-link"><a href="./index.html">Studio</a></li>
+                <li class="portfolio-link"><a href="portfolio.html">Portfolio</a></li>
+                <li class="contact-link"><a href="">Contacts</a></li>
             </ul>
         </nav>
         <address>
