--- a/portfolio.html
+++ b/portfolio.html
@@ -15,21 +15,21 @@
         <nav>
             <a href="./index.html">WebStudio</a>
             <ul class="menu">
-                <li class="studio-link"><a href="./index.html">Studio</a></li>
-                <li class="portfolio-link"><a href="portfolio.html">Portfolio</a></li>
-                <li class="contact-link"><a href="">Contacts</a></li>
+                <li class="studio-link list"><a href="./index.html">Studio</a></li>
+                <li class="portfolio-link list"><a href="portfolio.html">Portfolio</a></li>
+                <li class="contact-link list"><a href="">Contacts</a></li>
             </ul>
         </nav>
         <address>
             <ul>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                <li class="list"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="list"><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
     </header>
     <main>
       <section>
-        <ul class="btn-menu">
+        <ul class="btn-menu list">
             <li><button type="button" class="btn-text">All</button></li>
             <li><button type="button" class="btn-text">WebSite</button></li>
             <li><button type="button" class="btn-text">App</button></li>
@@ -38,7 +38,7 @@
         </ul>
       </section>
       <section>
-        <ul>
+        <ul class="list">
             <li>
                 <img src="./images/imgportfolio1.jpg" alt="" width="360" height="300">
                 <h2>Banking App Interface Concept</h2>
@@ -57,7 +57,7 @@
         </ul>
       </section>
       <section>
-       <ul>
+       <ul class="list">
         <li>
             <img src="./images/imgportfolio4.jpg" alt="" width="360" height="300">
             <h2>Taxi Service</h2>
@@ -76,7 +76,7 @@
        </ul>
       </section>
       <section>
-        <ul>
+        <ul class="list">
             <li>
                 <img src="./images/imgportfolio7.jpg" alt="" width="360" height="300">
                 <h2>Instagram Stories Concept</h2>
